Bug 458812 - Flatpak apps don't show "Uninstall or Manage Add-Ons" item in their context menu
Summary: Flatpak apps don't show "Uninstall or Manage Add-Ons" item in their context menu
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Nate Graham
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-06 20:03 UTC by Nate Graham
Modified: 2022-09-08 01:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2022-09-06 20:03:05 UTC
Everything KDE from git master on top of Fedora 36.

STEPS TO REPRODUCE
1. Install any Flatpak app using any method (Discover, CLI--doesn't matter)
2. Find it in Kickoff anywhere (all apps page, category page, favorites page--doesn't matter)
3. Right-click on it

OBSERVED RESULT
The menu that opens is missing the "Uninstall or Manage Add-Ons" item

EXPECTED RESULT
The menu includes the "Uninstall or Manage Add-Ons" item
Comment 1 Nate Graham 2022-09-06 20:06:09 UTC
Looking into this.
Comment 2 Bug Janitor Service 2022-09-06 20:11:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2086
Comment 3 Nate Graham 2022-09-08 01:18:07 UTC
Git commit 8cd5190fac930102f7633084762461c5e67d4164 by Nate Graham.
Committed on 07/09/2022 at 21:29.
Pushed by ngraham into branch 'master'.

applets/kicker: use better API to determine apps' AppStream IDs

The current code gathers AppStream IDs by looking at the app's desktop
name and then adding ".desktop" onto the end of this, reflecting a
now-deprecated convention that every AppStream ID ought to end in
".desktop". This hasn't been true for a while and isn't correct today;
let's use a more modern API that returns more correct results.
FIXED-IN: 5.24.7

M  +2    -1    applets/kicker/plugin/actionlist.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/8cd5190fac930102f7633084762461c5e67d4164
Comment 4 Nate Graham 2022-09-08 01:18:55 UTC
Git commit 07fe092fc008580ae767d046785c9e08b94aa70f by Nate Graham.
Committed on 08/09/2022 at 01:18.
Pushed by ngraham into branch 'Plasma/5.24'.

applets/kicker: use better API to determine apps' AppStream IDs

The current code gathers AppStream IDs by looking at the app's desktop
name and then adding ".desktop" onto the end of this, reflecting a
now-deprecated convention that every AppStream ID ought to end in
".desktop". This hasn't been true for a while and isn't correct today;
let's use a more modern API that returns more correct results.
FIXED-IN: 5.24.7


(cherry picked from commit 8cd5190fac930102f7633084762461c5e67d4164)

M  +2    -1    applets/kicker/plugin/actionlist.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/07fe092fc008580ae767d046785c9e08b94aa70f