applets/kicker: use better API to determine apps' AppStream IDs

The current code gathers AppStream IDs by looking at the app's desktop
name and then adding ".desktop" onto the end of this, reflecting a
now-deprecated convention that every AppStream ID ought to end in
".desktop". This hasn't been true for a while and isn't correct today;
let's use a more modern API that returns more correct results.

BUG: 458812
FIXED-IN: 5.24.7